@@ -90,6 +90,8 @@ Changes since 0.2.8
 Changes since 0.2.8.3_beta1:
 ============================
 
+- Authentication routines now use utf8 as forward- compatibility with
+  trunk. Previously, non-ASCII usernames simply didn't work at all.
 - Better lag slide protection: clients no longer get confused when
   the server sends their cycle back in time, and the server no longer
   does that for old clients.
